tests/libs_are_implicitly_included/libs_are_implicitly_included.exp
Stopping existing server

Starting flow

Assert flow is running
Error ---------------------------------------------------------------------------------------------------- src/a.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/a.js:3:17
   3| let x: string = 123;
                      ^^^ [1]

References:
   src/a.js:3:8
   3| let x: string = 123;
             ^^^^^^ [2]



Found 1 error

Change lib file

Assert flow is not running
